# ifib/models.py
@@ -73,3 +73,10 @@ class TeamMember(models.Model):
 
     def __str__(self):
         return self.name
+
+
+class FeedbackForm(models.Model):
+    name = models.CharField(max_length=255)
+    phone_number = models.CharField(max_length=10)
+    email = models.EmailField()
+    text = models.TextField()
